# benchmark-playground

./: .gitignore  .gitmodules  README.md  benchmark-playground.sln  readme_generator.py  run.sh  test.sh
c/: Makefile
c/include/: file_utils.h  quick_sort.h  quick_sort_benchmarker.h  string_utils.h
c/src/: main.c
c/src/benchmarker/: quick_sort_benchmarker.c
c/src/operations/: quick_sort.c
c/src/utils/: file_utils.c
inputs/: random.json
languages/c/: .gitignore  CMakeLists.txt  README.md  build.sh  configure.sh  install_deps.sh  run.sh  test.sh
languages/c#/: README.md  build.sh  c#.csproj  run.sh  test.sh
languages/c#/src/: App.cs  App.csproj
languages/c#/src/benchmarkers/: Benchmarker.cs  BenchmarkerManager.cs
languages/c#/src/benchmarkers/impl/: QuickSortBenchmarker.cs
languages/c#/src/operations/: QuickSort.cs
languages/c#/tests/: QuickSortTest.cs  Tests.csproj
languages/c++/: .gitignore  CMakeLists.txt  README.md  build.sh  configure.sh  install_deps.sh  run.sh  test.sh
languages/c++/include/: benchmarker.h  benchmarker_manager.h  file_utils.h  operations.h  quick_sort_benchmarker.h  string_utils.h
languages/c++/src/: main.cpp
languages/c++/src/benchmarker/: benchmarker_manager.cpp
languages/c++/src/benchmarker/impl/: quick_sort_benchmarker.cpp
languages/c++/src/operations/: quick_sort.cpp
languages/c++/src/utils/: file_utils.cpp  string_utils.cpp
languages/c++/test/: quick_sort_test.cpp
languages/c/include/: benchmarker.h  file_utils.h  quick_sort_benchmarker.h  string_utils.h
languages/c/src/: main.c
languages/c/src/benchmarker/: benchmarker.c
languages/c/src/benchmarker/impl/: quick_sort_benchmarker.c
languages/c/src/operations/: quick_sort.c
languages/c/src/utils/: file_utils.c  string_utils.c
languages/c/test/: quick_sort_test.c
languages/crystal/: .editorconfig  .gitignore  LICENSE  README.md  build.sh  run.sh  shard.yml  test.sh
languages/crystal/spec/: quick_sort_spec.cr
languages/crystal/src/: cli_parse.cr  main.cr
languages/crystal/src/benchmarkers/: benchmarker.cr  benchmarker_manager.cr
languages/crystal/src/operations/: quick_sort.cr
languages/go/: .gitignore  README.md  build.sh  go.mod  main  main.go  run.sh  test.sh
languages/go/benchmarkers/: benchmarker.go  quickSortBenchmarker.go
languages/go/operations/: quickSort.go
languages/go/src/: go.mod  main.go
languages/go/src/benchmarkers/: benchmarker.go  benchmarkerManager.go  quickSortBenchmarker.go
languages/go/src/operations/: quickSort.go  quickSort_test.go
languages/go/src/utils/: comparable.go
languages/go/utils/: comparable.go  utilities.go
languages/haskell/: CHANGELOG.md  LICENSE  README.md  build.sh  haskell.cabal  run.sh  test.sh
languages/haskell/app/: Main.hs
languages/haskell/app/Benchmarkers/: QuickSortBenchmarker.hs
languages/haskell/app/Operations/: QuickSort.hs
languages/haskell/app/Utils/: Time.hs
languages/haskell/src/: Main.hs
languages/haskell/src/Benchmarkers/: QuickSortBenchmarker.hs
languages/haskell/src/Operations/: QuickSort.hs
languages/haskell/src/Utils/: File.hs
languages/haskell/tests/: TestMain.hs  TestQuickSort.hs
languages/java/: .gitignore  README.md  build.sh  run.sh  settings.gradle.kts  test.sh
languages/java/app/: build.gradle.kts
languages/nodejs/: README.md  build.sh  configure.sh  jest.config.ts  package.json  run.sh  test.sh  tsconfig.json
languages/nodejs/src/: index.ts  main.ts
languages/nodejs/src/benchmarkers/: benchmarker-manager.ts  benchmarker.ts
languages/nodejs/src/operations/: quick-sort.ts
languages/nodejs/src/utils/: comparable.ts  utilities.ts
languages/nodejs/test/: quick-sort.spec.ts
languages/python/: README.md  configure.sh  main.py  pyproject.toml  python_benchmark_runner.py  run.sh  test.sh
languages/python/operations/: quick_sort.py
languages/python/src/: python_benchmark_runner.py
languages/python/src/benchmarkers/: _base_benchmarker.py  benchmarker.py  quick_sort_benchmarker.py
languages/python/src/operations/: quick_sort.py
languages/python/tests/: quick_sort_test.py
languages/ruby/: Gemfile  README.md  run.sh
languages/ruby/lib/: cli_parser.rb  main.rb
languages/ruby/lib/benchmarkers/: benchmarker.rb  benchmarker_manager.rb
languages/ruby/lib/operations/: quick_sort.rb
languages/ruby/spec/: quick_sort_spec.rb
languages/rust/: Cargo.toml  README.md  build.sh  run.sh  test.sh
languages/rust/benches/: rust_benchmark.rs
languages/rust/src/: benchmarkers.rs  errors.rs  lib.rs  main.rs  utils.rs
languages/rust/src/benchmarkers/: base_benchmarker.rs  benchmarker.rs  implementations.rs  quick_sort_benchmarker.rs
languages/rust/src/benchmarkers/implementations/: quick_sort_benchmarker.rs
languages/rust/src/operations/: quick_sort.rs
languages/rust/src/utils/: macros.rs
languages/rust/tests/: quick_sort_test.rs
languages/zig/: README.md  build.sh  build.zig  build.zig.zon  run.sh  test.sh
languages/zig/src/: main.zig
languages/zig/src/benchmarkers/: benchmarker.zig  benchmarker_runner.zig
languages/zig/src/operations/: quick_sort.zig
languages/zig/src/utils/: file_utils.zig
python/: main.py
python/benchmarkers/: _base_benchmarker.py  quick_sort_benchmarker.py
rust/: Cargo.toml
rust/src/: benchmarkers.rs  main.rs  quick_sort.rs
rust/src/benchmarkers/: quick_sort_benchmarker.rs
templates/: README_TEMPLATE.md
(+15 files in other folders)
